--- a/package.json
+++ b/package.json
@@ -10,16 +10,30 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/netinfo": "^4.2.2",
+    "formik": "^1.5.8",
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-onesignal": "^3.4.1",
     "react-native-reanimated": "^1.3.0",
+    "react-native-responsive-fontsize": "^0.2.2",
+    "react-native-sentry": "^0.43.2",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.2.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.9.1",
-    "react-navigation-tabs": "^2.5.5"
+    "react-navigation-tabs": "^2.5.5",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -34,5 +48,4 @@
   "jest": {
     "preset": "react-native"
   }
-
 }
