--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^1.5.8",
     "react": "16.9.0",
     "react-native": "0.61.1",
+    "react-native-check-box": "^2.1.7",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
