--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-picker": "^0.0.16",
     "react-native-onesignal": "^3.4.1",
+    "react-native-picker-modal-view": "^1.2.6",
+    "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "^1.3.0",
     "react-native-responsive-fontsize": "^0.2.2",
     "react-native-sentry": "^0.43.2",
