--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.4.0",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-modal-picker": "^0.0.16",
     "react-native-onesignal": "^3.4.1",
     "react-native-phone-input": "^0.2.4",
