--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,6 +187,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-file-viewer')
+    implementation project(':react-native-fs')
     implementation project(':react-native-document-picker')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -200,7 +202,11 @@ dependencies {
         implementation jscFlavor
     }
 }
-
+preBuild.doFirst {
+    ant.replaceregexp(match:'androidx.core.content.', replace:'android.support.v4.content.', flags:'g', byline:true) {
+        fileset(dir: '../../node_modules/react-native-file-viewer/android/src/main/java/com/vinzscam/reactnativefileviewer', includes: '*.java')
+    }
+}
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
