--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'efirstv2' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
+pod 'RNFS', :path => '../node_modules/react-native-fs'
+pod 'RNFileViewer', :path => '../node_modules/react-native-file-viewer/ios'
   target 'efirstv2Tests' do
     inherit! :search_paths
     # Pods for testing
