--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-document-picker": "^3.2.4",
     "react-native-easy-toast": "^1.2.0",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-file-viewer": "^2.0.0",
+    "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -44,6 +46,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.11.2",
     "yup": "^0.27.0"
   },
   "devDependencies": {
