--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.4.0",
     "react-native-modal-datetime-picker": "^7.6.0",
