--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/netinfo": "^4.2.2",
+    "@react-native-community/viewpager": "^2.0.0",
     "formik": "^1.5.8",
     "jetifier": "^1.6.4",
     "react": "16.9.0",
