--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/netinfo": "^4.2.2",
     "@react-native-community/viewpager": "^2.0.0",
+    "@react-native-firebase/app": "^6.0.4",
+    "@react-native-firebase/firestore": "^6.0.4",
     "formik": "^1.5.8",
     "jetifier": "^1.6.4",
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-check-box": "^2.1.7",
     "react-native-country-picker-modal": "^0.8.0",
+    "react-native-device-info": "^5.3.1",
     "react-native-document-picker": "^3.2.4",
     "react-native-easy-toast": "^1.2.0",
     "react-native-extended-stylesheet": "^0.12.0",
