--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,13 @@
 
 buildscript {
     ext {
+        //Option 1 (latest):
+        firebaseIidVersion = "19.0.1" // default: "19.0.1"
+        //Option 2 (legacy GooglePlay dependency but using AndroidX):
+        googlePlayServicesIidVersion = "17.0.0" // default: "17.0.0" - AndroidX
+        //Option 3 (legacy GooglePlay dependency before AndroidX):
+        googlePlayServicesIidVersion = "16.0.1"
+
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
         compileSdkVersion = 28
