--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,5 +22,5 @@ android.enableJetifier=true
 
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=eFirst@321
-MYAPP_UPLOAD_KEY_PASSWORD=eFirst@321
+MYAPP_UPLOAD_STORE_PASSWORD=efirst
+MYAPP_UPLOAD_KEY_PASSWORD=efirst
