--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-check-box": "^2.1.7",
+    "react-native-check-version": "^1.0.4",
     "react-native-country-picker-modal": "^0.8.0",
     "react-native-device-info": "^5.3.1",
     "react-native-document-picker": "^3.2.4",
